[package]
name = "gxc-peer-node"
version = "0.1.0"
edition = "2021"
authors = ["GXC Development Team"]
description = "Lightweight peer node for GXC blockchain network"
license = "MIT"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
